# Fantasy-LLM-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
OneDrive/Documents/GitHub/FantasyLLM/: README.md  pyproject.toml
OneDrive/Documents/GitHub/FantasyLLM/.github/workflows/: ci.yml
OneDrive/Documents/GitHub/FantasyLLM/src/fantasyllm/: data.py  demo.py  generate.py  train.py
src/fantasyllm/: api.py  config.py  data.py  demo.py  generate.py  health.py  logging.py  train.py
