[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasyllm"
version = "1.0.0"
description = "LoRA fine-tuned Llama-2 for fantasy stories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch==2.3.0",
    "transformers==4.41.2",
    "peft==0.11.1",
    "datasets==2.20.0",
    "accelerate==0.31.0",
    "wandb==0.17.0",
    "gradio==4.36.1",
    "bitsandbytes==0.43.1",
    "scikit-learn==1.5.0",
    "fire==0.5.0"
]

[project.scripts]
fantasy-data = "fantasyllm.data:main"
fantasy-train = "fantasyllm.train:main"
fantasy-chat = "fantasyllm.generate:main"
fantasy-demo = "fantasyllm.demo:main"